Correção de algumas palavras

--- a/exercicios/ex - links/index.html
+++ b/exercicios/ex - links/index.html
@@ -11,7 +11,7 @@
     <h2>Links externos, internos e para dowload</h2>
     <p>Neste arquivo <abbr title="HyperText Markup Language">HTML</abbr> vamos praticar o uso de <strong>links internos</strong> (referência relativa), <strong>links externos</strong> (referência absoluta) e <strong>para dowloads</strong>.</p>
     <p>
-        <a href="#" target="_blank"></a> <!--Vai te direcionar para os ite que o link faz refrência, porém em uma nova guia em branco-->
+        <a href="#" target="_blank"></a> <!--Vai te direcionar para o site que o link faz referência, porém em uma nova guia em branco-->
         <a href="#" target="_self"></a> <!--Vai te direcionar para o site do link, mas será dentro da sua guia atual-->
     </p>
     <p>
