Dando um retoque

--- a/exercicios/ex - tabela/tabela002.html
+++ b/exercicios/ex - tabela/tabela002.html
@@ -13,6 +13,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
 
         td, th {
@@ -24,10 +25,28 @@
             text-align: right;
         }
 
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         thead, tfoot {
-            background-color: gray;
+            background-color: #383838;
             color: white;
         }
+
+        tbody > tr:nth-child(2n) {
+            background-color: lightgray;
+        }
+
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
+        }
+
     </style>
 </head>
 <body>
@@ -42,10 +61,11 @@
                 tr, td, th
     -->
     <table>
+        <caption>Poupulação das Unidades Federativas</caption> <!-- Título, por assim dizer -->
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
@@ -64,7 +84,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de habitates</th>
+                <th scope="row">Total de habitates</th>
                 <td><strong>0000</strong></td>
             </tr>
         </tfoot>
