--- a/Desafios/d07/desafio07.html
+++ b/Desafios/d07/desafio07.html
@@ -38,10 +38,10 @@
     <table>
         <thead>
             <tr>
-                <th rowspan="2" class="especial">Área</th>
-                <th rowspan="2" class="especial">Disciplinas</th>
-                <th colspan="2" class="especial">Notas</th>
-                <th rowspan="2" class="especial">Média</th>
+                <th scope="col" rowspan="2" class="especial">Área</th>
+                <th scope="col" rowspan="2" class="especial">Disciplinas</th>
+                <th scope="colgroup" colspan="2" class="especial">Notas</th>
+                <th scope="col" rowspan="2" class="especial">Média</th>
             </tr>
             <tr>
                 <td class="especial">Nota 1</td>
@@ -50,7 +50,7 @@
         </thead>
         <tbody>
             <tr>
-                <th rowspan="4">Exatas</th>
+                <th scope="rowgroup" rowspan="4">Exatas</th>
                 <td>Matemática</td>
                 <td>0.0</td>
                 <td>0.0</td>
@@ -75,11 +75,11 @@
                 <td>0.0</td>
             </tr>
             <tr>
-                <th colspan="4" class="especial2">Média de Exatas</th>
+                <th scope="row" colspan="4" class="especial2">Média de Exatas</th>
                 <td class="especial">0.0</td>
             </tr>
             <tr>
-                <th rowspan="2">Humanas</th>
+                <th scope="rowgroup" rowspan="2">Humanas</th>
                 <td>História</td>
                 <td>0.0</td>
                 <td>0.0</td>
@@ -92,7 +92,7 @@
                 <td>0.0</td>
             </tr>
             <tr>
-                <th colspan="4" class="especial2">Média de Humanas</th>
+                <th scope="row" colspan="4" class="especial2">Média de Humanas</th>
                 <td class="especial">0.0</td>
             </tr>
         </tbody>
