Testando funcionalidade da tabela

--- a/exercicios/ex - tabela/tabela002.html
+++ b/exercicios/ex - tabela/tabela002.html
@@ -89,5 +89,13 @@
             </tr>
         </tfoot>
     </table>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore, culpa nihil beatae ipsa, repellat nisi quae vero mollitia alias laboriosam architecto. Officiis, libero. Corporis odit ea quisquam obcaecati enim illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam ea laboriosam debitis ipsa veritatis tempore laborum totam ut aliquid animi! Quisquam accusamus nesciunt dicta sed eum quidem assumenda quibusdam ipsa?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, ea! Optio esse rerum earum, odit deleniti iusto blanditiis sequi at? A libero laboriosam esse officiis doloremque neque non id ipsum!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore, culpa nihil beatae ipsa, repellat nisi quae vero mollitia alias laboriosam architecto. Officiis, libero. Corporis odit ea quisquam obcaecati enim illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam ea laboriosam debitis ipsa veritatis tempore laborum totam ut aliquid animi! Quisquam accusamus nesciunt dicta sed eum quidem assumenda quibusdam ipsa?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, ea! Optio esse rerum earum, odit deleniti iusto blanditiis sequi at? A libero laboriosam esse officiis doloremque neque non id ipsum!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore, culpa nihil beatae ipsa, repellat nisi quae vero mollitia alias laboriosam architecto. Officiis, libero. Corporis odit ea quisquam obcaecati enim illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam ea laboriosam debitis ipsa veritatis tempore laborum totam ut aliquid animi! Quisquam accusamus nesciunt dicta sed eum quidem assumenda quibusdam ipsa?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, ea! Optio esse rerum earum, odit deleniti iusto blanditiis sequi at? A libero laboriosam esse officiis doloremque neque non id ipsum!</p>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolore, culpa nihil beatae ipsa, repellat nisi quae vero mollitia alias laboriosam architecto. Officiis, libero. Corporis odit ea quisquam obcaecati enim illum! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam ea laboriosam debitis ipsa veritatis tempore laborum totam ut aliquid animi! Quisquam accusamus nesciunt dicta sed eum quidem assumenda quibusdam ipsa?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita, ea! Optio esse rerum earum, odit deleniti iusto blanditiis sequi at? A libero laboriosam esse officiis doloremque neque non id ipsum!</p>
 </body>
 </html>
