--- a/exercicios/ex - iframe/iframe002.html
+++ b/exercicios/ex - iframe/iframe002.html
@@ -20,7 +20,7 @@
     <h1>Teste com iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error veniam, eaque explicabo tenetur, fugit itaque, eius provident aut aliquid vitae delectus consequatur voluptas ipsum suscipit iure sit dicta rerum repellat? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis quisquam veniam ipsam libero, nemo sequi facere rem vitae, laboriosam molestiae excepturi et quas sint earum quaerat totam eum. Provident, reprehenderit?</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500px" width="500px"></iframe>
+    <iframe src="paginas-extras/pag001.html" frameborder="0" height="500px" width="500px"></iframe>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus ut, a eligendi, laboriosam ab dignissimos esse expedita ipsum, rerum soluta aspernatur quis similique corrupti nobis ad fugit molestias sed veritatis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, modi veniam, fuga deserunt voluptate accusantium explicabo odio iusto nobis aspernatur suscipit id aliquid cumque doloremque sequi? Enim, itaque quaerat. Illo!</p>
 </body>
