--- a/exercicios/ex - formularios/form003.html
+++ b/exercicios/ex - formularios/form003.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <h1>Formulário novo</h1>
-    <form action="cadastro.php">
+    <form action="cadastro.php" method="post" autocomplete="on">
         <p>
             <label for="inome">Nome: </label>
-            <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome completo">
+            <input type="text" name="nome" id="inome" required maxlength="30" placeholder="Nome completo" autocomplete="name">
         </p>
         
         <p>
